# bilibili-live

./: .gitignore  .pre-commit-config.yaml  README.md  README.rst  pyproject.toml
src/: bilibiliLive.py  observer.py
src/bilibili_live/: __init__.py  bilibiliLive.py  login.py
src/bilibili_live/api/: __init__.py  generateLoginQRCode.py  getDanmuInfo.py  getRoomInfo.py  getUserInfo.py  pullScanCodeStatus.py
src/bilibili_live/events/: __init__.py  eventData.py  handler.py
src/bilibili_live/packageProcess/: packageProcessor.py
src/bilibili_live/packageProcess/convert/: DANMU_MSG_to_Danmu.py  ENTRY_EFFECT_to_User.py  GUARD_BUY_to_User.py  INTERACT_WORD_to_User.py  SEND_GIFT_to_Gift.py  SUPER_CHAT_MESSAGE_JPN_to_SuperChat.py  SUPER_CHAT_MESSAGE_to_SuperChat.py
src/bilibili_live/proto/: proto.py
src/bilibili_live/utils/: roomInfo.py
src/events/: danmu.py  eventData.py  handler.py
src/observer/: observer.py
src/observer/packageProcess/: DANMU_MSG_to_Danmu.py  ENTRY_EFFECT_to_User.py  INTERACT_WORD_to_User.py  SEND_GIFT_to_Gift.py  SUPER_CHAT_MESSAGE_JPN_to_SuperChat.py  SUPER_CHAT_MESSAGE_to_SuperChat.py  exceptions.py  packageProcessor.py
src/observer/packageProcess/convert/: DANMU_MSG_to_Danmu.py  ENTRY_EFFECT_to_User.py  INTERACT_WORD_to_User.py  SEND_GIFT_to_Gift.py  SUPER_CHAT_MESSAGE_JPN_to_SuperChat.py  SUPER_CHAT_MESSAGE_to_SuperChat.py
src/packageProcess/: packageProcessor.py
src/packageProcess/convert/: ENTRY_EFFECT_to_User.py  INTERACT_WORD_to_User.py  SEND_GIFT_to_Gift.py  SUPER_CHAT_MESSAGE_JPN_to_SuperChat.py  SUPER_CHAT_MESSAGE_to_SuperChat.py
src/proto/: proto.py
src/utils/: danmuInfo.py  roomInfo.py
