[project]
name = "bilibili-live"
version = "0.1.0"
description = "哔哩哔哩直播间互动工具"
authors = [
    {name = "Gedoy", email = "773673499@qq.com"},
]
dependencies = [
    "requests>=2.28.1",
    "websockets>=10.3",
    "brotli>=1.0.9",
]
requires-python = ">=3.7"
readme = "README.rst"
license = {text = "MIT"}

[tool.pdm]

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"
