[project]
name = "bilibili-live"
version = "0.10.1"
description = "哔哩哔哩直播间互动工具"
authors = [
    {name = "Gedoy", email = "773673499@qq.com"},
]
dependencies = [
    "requests>=2.28.1",
    "websockets>=10.3",
    "brotli>=1.0.9",
    "qrcode>=7.3.1",
]
requires-python = ">=3.7"
readme = "README.md"
license = {text = "MIT"}

[project.urls]
repository = "https://github.com/Gedoy9793/bilibili-live"

[project.optional-dependencies]

[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "pre-commit>=2.20.0",
    "twine>=4.0.1",
]

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"
